@@ -17,8 +17,8 @@ import org.springframework.mock.web.MockHttpServletRequest;
 class HandlerMethodArgumentResolverTest {
 
     private static final Logger logger = LoggerFactory.getLogger(HandlerMethodArgumentResolverTest.class);
-    private final HandlerMethodArgumentResolver handlerMethodArgumentResolver = new HandlerMethodArgumentResolver();
 
+    private final HandlerMethodArgumentResolver handlerMethodArgumentResolver = new HandlerMethodArgumentResolver();
     private final ParameterNameDiscoverer nameDiscoverer = new LocalVariableTableParameterNameDiscoverer();
 
     @Test
@@ -32,6 +32,7 @@ class HandlerMethodArgumentResolverTest {
         Class<?> clazz = TestUserController.class;
         Method method = getMethod("create_string", clazz.getDeclaredMethods());
         String[] parameterNames = nameDiscoverer.getParameterNames(method);
+        assert parameterNames != null;
         Object[] values = new Object[parameterNames.length];
         for (int i = 0; i < parameterNames.length; i++) {
             String parameterName = parameterNames[i];
@@ -39,7 +40,7 @@ class HandlerMethodArgumentResolverTest {
             values[i] = request.getParameter(parameterName);
         }
 
-        ModelAndView mav = (ModelAndView) method.invoke(clazz.newInstance(), values);
+        ModelAndView mav = (ModelAndView) method.invoke(clazz.getConstructor().newInstance(), values);
         assertThat(mav.getObject("userId")).isEqualTo(userId);
         assertThat(mav.getObject("password")).isEqualTo(password);
     }
@@ -48,21 +49,18 @@ class HandlerMethodArgumentResolverTest {
         return Arrays.stream(methods)
             .filter(method -> method.getName().equals(name))
             .findFirst()
-            .get();
+            .orElseThrow(IllegalArgumentException::new);
     }
 
     @DisplayName("메소드의 파라미터 타입의 Object 배열을 반환한다")
     @Test
     void returns_an_object_array_of_parameter_types_of_method() {
         // given
-        final HandlerMethodArgumentResolver handlerMethodArgumentResolver = new HandlerMethodArgumentResolver();
-
         final MockHttpServletRequest request = new MockHttpServletRequest("GET", "/users");
         request.addParameter("userId", "admin");
         request.addParameter("password", "pass");
 
-        final Class<?> clazz = TestUserController.class;
-        final Method method = getMethod("create_string", clazz.getDeclaredMethods());
+        final Method method = getTestMethod("create_string");
 
         // when
         final Object[] actual = handlerMethodArgumentResolver.resolve(method, request);
@@ -80,8 +78,7 @@ class HandlerMethodArgumentResolverTest {
         request.addParameter("userId", "admin");
         request.addParameter("password", "pass");
 
-        final Class<?> clazz = TestUserController.class;
-        final Method method = getMethod("notParameters", clazz.getDeclaredMethods());
+        final Method method = getTestMethod("notParameters");
 
         // when
         final Object[] actual = handlerMethodArgumentResolver.resolve(method, request);
@@ -93,14 +90,13 @@ class HandlerMethodArgumentResolverTest {
 
     @DisplayName("메소드의 파라미터가 원시 타입인 Object 배열을 반환한다")
     @Test
-    void returns_an_object_array_of_primitive_types_of_method() throws Exception {
+    void returns_an_object_array_of_primitive_types_of_method() {
         // given
         final MockHttpServletRequest request = new MockHttpServletRequest("GET", "/empty-parameters");
         request.addParameter("id", String.valueOf(Long.MAX_VALUE));
         request.addParameter("age", String.valueOf(Integer.MAX_VALUE));
 
-        final Class<?> clazz = TestUserController.class;
-        final Method method = getMethod("create_int_long", clazz.getDeclaredMethods());
+        final Method method = getTestMethod("create_int_long");
 
         // when
         final Object[] actual = handlerMethodArgumentResolver.resolve(method, request);
@@ -110,5 +106,10 @@ class HandlerMethodArgumentResolverTest {
             () -> assertThat(actual[0]).isEqualTo(Long.MAX_VALUE),
             () -> assertThat(actual[1]).isEqualTo(Integer.MAX_VALUE)
         );
+    }
+
+    private Method getTestMethod(final String methodName) {
+        final Class<?> clazz = TestUserController.class;
+        return getMethod(methodName, clazz.getDeclaredMethods());
     }
 }
